@@ -16,19 +16,16 @@ define( function( require ) {
   var Solute = require( 'PH_SCALE/common/model/Solute' );
   var Solution = require( 'PH_SCALE/common/model/Solution' );
   var Vector2 = require( 'DOT/Vector2' );
-  var Water = require( 'PH_SCALE/common/model/Water' );
 
   function CustomModel() {
 
     var thisModel = this;
 
-    thisModel.water = Water;
-
     // Beaker, everything else is positioned relative to it. Offset constants were set by visual inspection.
     thisModel.beaker = new Beaker( new Vector2( 750, 580 ), new Dimension2( 450, 300 ) );
 
     // Solution in the beaker
-    thisModel.solution = new Solution( new Property( Solute.createCustom( 7 ) ), 0.5, thisModel.water, 0, thisModel.beaker.volume );
+    thisModel.solution = new Solution( new Property( Solute.createCustom( 7 ) ), 0.5, 0, thisModel.beaker.volume );
   }
 
   CustomModel.prototype = {
